# workshop_aovivo_lvgalvao_etl_duckdb_docker

./: README.md  app.py  pyproject.toml  requirements.txt
