[tool.poetry]
name = "workshop-aovivo-lvgalvao-etl-duckdb-docker"
version = "0.1.0"
description = ""
authors = ["Luciano Borba <luhborbafilho@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.32.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
